# acre_ctrl

./: .gitignore  Dockerfile  LICENSE  README.md  run.sh  run_sim.sh
acre_ctrl/: CMakeLists.txt  package.xml
acre_ctrl/acre_ctrl/algorithm/: algorithm_base.py  mpc.py  pd.py  pure_pursuit.py  pursuit.py  robotarium.py  sdf_cbf.py  spin_example.py
acre_ctrl/include/acre_ctrl/algo/: algorithm_runner.hpp
acre_ctrl/include/acre_ctrl/common/: patch.hpp
acre_ctrl/src/common/: ros2_sport_client.cpp  sportmode_driver.cpp  unitree_topic_bridge.cpp
acre_ctrl/src/ctrl/: control_node.cpp
acre_ctrl_msgs/: CMakeLists.txt  package.xml
install/acre_ctrl/include/acre_ctrl/acre_ctrl/msg/: rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/acre_ctrl/include/acre_ctrl/acre_ctrl/srv/: go2_start_sequence.hpp
install/acre_ctrl/include/acre_ctrl/acre_ctrl/srv/detail/: go2_start_sequence__builder.hpp  go2_start_sequence__functions.h  go2_start_sequence__rosidl_typesupport_fastrtps_cpp.hpp  go2_start_sequence__type_support.c  go2_start_sequence__type_support.cpp
install/acre_ctrl/local/lib/python3.10/dist-packages/acre_ctrl-0.0.0-py3.10.egg-info/: top_level.txt
install/acre_ctrl/share/acre_ctrl/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/acre_ctrl/share/acre_ctrl/cmake/: acre_ctrlConfig.cmake  acre_ctrl__rosidl_typesupport_cExport-noconfig.cmake  acre_ctrl__rosidl_typesupport_cppExport.cmake  acre_ctrl__rosidl_typesupport_introspection_cppExport-noconfig.cmake  acre_ctrl__rosidl_typesupport_introspection_cppExport.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_acre_ctrl__rosidl_generator_cExport-noconfig.cmake  export_acre_ctrl__rosidl_generator_cExport.cmake  export_acre_ctrl__rosidl_generator_pyExport-noconfig.cmake  export_acre_ctrl__rosidl_generator_pyExport.cmake  export_acre_ctrl__rosidl_typesupport_fastrtps_cExport.cmake  export_acre_ctrl__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake
install/acre_ctrl/share/acre_ctrl/srv/: Go2StartSequence.idl
install/acre_ctrl/share/ament_index/resource_index/parent_prefix_path/: acre_ctrl
log/: latest_build
src/acre_ctrl/: CMakeLists.txt  package.xml
src/acre_ctrl/acre_ctrl/algorithm/: __init__.py  algorithm_base.py  cdr.py  spin_example.py
src/acre_ctrl/example/: pure_pursuit.py  spin_example.py
src/acre_ctrl/include/acre_ctrl/algo/: algorithm_base.cpp  algorithm_base.hpp  algorithm_runner.hpp  components.hpp
src/acre_ctrl/include/acre_ctrl/common/: ros2_sport_client.hpp
src/acre_ctrl/python/: algorithm_base.py  component_registry.py  components.py
src/acre_ctrl/src/algo/: spin_sample.cpp
src/acre_ctrl/src/common/: bindings.cpp  ros2_sport_client.cpp  sportmode_driver.cpp
src/acre_ctrl/src/ctrl/: control_node.cpp  feedback_ctrl.cpp  point_control_node.cpp
